# FastAPI-Tutorial

./: .gitignore  README.md  pyproject.toml
fastapi_tutorial/: main.py  main_query_parameters.py
